@@ -14,6 +14,8 @@ Version vNext
 		 RegisterForDisposal method that users can interact with. (work item 19969)
 		-[Core] RegisterAll(Type, params Registration[]) overload added to make registring collections using
 		 Registration instances more convenient. (work item 20001)
+		-[Core] New convenient Lifestyle.CreateRegistration overloads added that allow supplying a single 
+		 TConcrete type instead of TService and TImplementation.
 
 
 Version 2.3.1 (v2.3.1 RTM)  2013-07-12
